# agent-ready

./: .agent-ready.toml  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  justfile  pyproject.toml
.claude/: skill.json
.github/workflows/: ci.yml  release.yml
assets/: README.md  demo.tape
src/: __init__.py  cli.py  config.py  grader.py  models.py  scanner.py
src/checks/: __init__.py  base.py  discoverability.py  documentation.py  ergonomics.py  invocability.py  machine_interface.py
src/fixes/: __init__.py  base.py  claude_md.py  claude_md_present.py  cli_commands_doc.py  cli_entry_point.py  exit_codes_doc.py  json_flag.py  justfile_present.py  pyproject.py  skill_manifest.py  stderr_separation_doc.py  structured_errors.py
src/reporters/: __init__.py  human_reporter.py  json_reporter.py
tests/: conftest.py  test_checks_discoverability.py  test_checks_documentation.py  test_checks_ergonomics.py  test_checks_invocability.py  test_checks_machine_interface.py  test_cli.py  test_fixes_claude_md.py  test_fixes_pyproject.py  test_grader.py  test_scanner.py
tests/fixtures/repo_minimal/: README.md  pyproject.toml
tests/fixtures/repo_minimal/src/: cli.py
tests/fixtures/repo_no_cli/: README.md
tests/fixtures/repo_perfect/: CLAUDE.md  README.md  justfile  pyproject.toml
tests/fixtures/repo_perfect/.claude/: skill.json
tests/fixtures/repo_perfect/src/: cli.py  errors.py
tests/fixtures/repo_with_claude_md_only/: CLAUDE.md
