[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-ready"
version = "0.1.0"
description = "Score a repo on agent-readiness and emit PR-sized fixes for failing checks"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Michael Pawlus" },
]
keywords = ["agents", "llm", "cli", "scorecard", "developer-tools", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/michaelpawlus/agent-ready"
Repository = "https://github.com/michaelpawlus/agent-ready"
Issues = "https://github.com/michaelpawlus/agent-ready/issues"
Changelog = "https://github.com/michaelpawlus/agent-ready/blob/main/CHANGELOG.md"

[project.scripts]
agent-ready = "src.cli:app"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
ignore_missing_imports = true
